# goto---Rust

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Fix 0.3.0.txt  LICENSE  README.md  RELEASING.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration.rs
tests/ui/: strict_after_forward_goto.rs  strict_after_forward_goto.stderr  strict_ok.rs  strict_skipped_segment.rs  strict_skipped_segment.stderr
